# mcp-study

./: README.md  chat_export.md  cursor_mcp_bridge.md
mcp-client/: client.py  client_app.py  client_ollama.py  pyproject.toml
mcp-server/: .env.example  .gitignore  README.md  env.example  logger_config.py  mcp_bridge.py  pyproject.toml  server_app.py  setup_logs.py  simple_test.py  weather.py  weather_mcp.py  weather_mcp_simple.py
