[project]
name = "weather-server"
version = "0.1.0"
description = "A HTTP weather API server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.7.2,<3.0.0",
    "python-dotenv>=1.0.1",
    "mcp[cli]>=1.0.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
server = "server_app:main"

